[gd_scene load_steps=3 format=3 uid="uid://cgv1h8vjxq5xg"]

[ext_resource type="Script" path="res://scripts/game/GameWorld.gd" id="1"]
[ext_resource type="Script" path="res://scripts/systems/GridSystem.gd" id="2"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1")

[node name="GridSystem" type="Node" parent="."]
script = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 0)
zoom = Vector2(2, 2)

[node name="Buildings" type="Node2D" parent="."]

[node name="Roads" type="Node2D" parent="."]

[node name="GridVisualizer" type="Node2D" parent="."]
visible = false